<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Bulking</string>

    <string name="txt_error_guide_items_retry">Não foi possível baixar items. Tente novamente.</string>
    <string name="txt_error_guide_items">Não foi possível baixar items.</string>
    <string name="settings">Configurações</string>

    <string name="cover_photo_description">Foto de Plano de Fundo</string>

    <string name="label_phone">Telefone</string>
    <string name="label_phone_icon">
        {md-local-phone @color/jfl_yellow @dimen/venue_property_icon_size_small}
    </string>
    <string name="label_website">Endereço Web</string>
    <string name="label_website_icon">
        {md-language @color/jfl_yellow @dimen/venue_property_icon_size_small}
    </string>
    <string name="label_email">E-mail</string>
    <string name="label_email_icon">
        {md-local-post-office @color/jfl_yellow @dimen/venue_property_icon_size_small}
    </string>
    <string name="label_address">Endereço Físico</string>
    <string name="label_address_icon">
        {md-location-on @color/jfl_yellow @dimen/venue_property_icon_size_small}
    </string>

</resources>

