<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    android:layout_marginStart="@dimen/card_horizontal_margin"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginEnd="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin"
    card_view:cardCornerRadius="4dp"
    app:elevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/guide_item_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/cover_photo_description"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/guide_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="start"
            android:padding="8dp"
            android:textSize="26sp"
            android:textColor="@color/jfl_white"
            android:background="#8C000000"
            android:layout_alignBottom="@+id/guide_item_cover"/>

        <Button
            android:id="@+id/guide_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guide_item_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/guide_item_schedulable_venue_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guide_item_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/guide_item_category"
            android:layout_toLeftOf="@+id/guide_item_category"
            android:layout_alignBaseline="@+id/guide_item_category"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/guide_item_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_below="@+id/guide_item_schedulable_venue_schedule"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/guide_item_short_description">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/guide_item_venue_phone_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/guide_item_venue_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/label_phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/guide_item_venue_website_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/guide_item_venue_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/label_website"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/guide_item_venue_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/guide_item_venue_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/guide_item_venue_address_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/guide_item_venue_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/label_address"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>